# chatbot

./: . cursorignore  .env  .env.example  .gitignore  .gitmessage  Makefile  README.md  cli.py  main.py  pyproject.toml
.cursor/rules/: README.mdc  architecture-guide.mdc  chatbot-project-structure.mdc  configuration-management.mdc  custom-modes.mdc  development-modes.mdc  development-workflow.mdc  file-conventions.mdc  interface-patterns.mdc  memory-bank-system.mdc  openai-chatbot-development.mdc  project-architecture.mdc  project-overview.mdc  python-development-guide.mdc  quick-reference.mdc  readme-documentation.mdc  streamlit-interface-guide.mdc  testing-and-validation.mdc  troubleshooting-guide.mdc  uv-dependency-management.mdc  uv-package-management.mdc
custom_modes/: creative_instructions.md  implement_instructions.md  plan_instructions.md  reflect_archive_instructions.md  van_instructions.md
data/: messages.json  sessions.json
docs/: context7-integration.md  environment-config-examples.md  openai-logging-guide.md  troubleshooting-guide.md
memory-bank/: activeContext.md  architecture-planning.md  creative-design-summary.md  productContext.md  progress.md  projectbrief.md  style-guide.md  systemPatterns.md  tasks.md  tasks_backup.md  techContext.md  van-qa-validation-report.md
memory-bank/archive/: archive-custom-modes-optimization-20250619.md  archive-openai-logging-implementation-20250620.md  archive-project-structure-optimization-20250620.md  (+1 more)
src/: __init__.py  cli.py  main.py  streamlit_app.py
test_data/: sessions.json
tests/: test_end_to_end.py
(+45 files in other folders)
